--- a/Lab1/Demon_Souls/index.html
+++ b/Lab1/Demon_Souls/index.html
@@ -5,7 +5,13 @@
 <title>Demon's Souls</title>
 </head>
 <body>
+<div class="header">
 <h1>Demon's Souls</h1>
+<a href="../Demon_Souls/index.html"><img src="../Images/1.jpg" width="200px" height="150px"></a>
+<a href="../Dark_Souls1/index.html"><img src="../Images/2.jpg" width="200px" height="150px"></a>
+<a href="../Dark_Souls2/index.html"><img src="../Images/3.jpg" width="200px" height="150px"></a>
+<a href="../Dark_Souls3/index.html"><img src="../Images/4.jpg" width="200px" height="150px"></a>
+</div>
 <div class=info>
 <p>Консольная ролевая игра в жанре тёмного фэнтези, разработанная японской компанией From Software (с участием SCE Japan Studio) эксклюзивно для игровой приставки PlayStation 3.</p>
 <p>Игра была выпущена 5 февраля 2009 года в Японии, под издательством Sony Computer Entertainment, и 7 октября 2009 года в Северной Америке, под издательством компании Atlus.</p>
