--- a/Lab1/Dark_Souls1/index.html
+++ b/Lab1/Dark_Souls1/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 <h1>Dark Souls</h1>
+<a href="../Demon_Souls/index.html"><img src="../Images/1.jpg" width="200px" height="150px"></a>
+<a href="../Dark_Souls1/index.html"><img src="../Images/2.jpg" width="200px" height="150px"></a>
+<a href="../Dark_Souls2/index.html"><img src="../Images/3.jpg" width="200px" height="150px"></a>
+<a href="../Dark_Souls3/index.html"><img src="../Images/4.jpg" width="200px" height="150px"></a>
 <div class=info>
 <p>Видеоигра в жанре action/RPG с открытым миром, разработанная японской компанией From Software для платформ PlayStation 3, Xbox 360 и Windows.</p> 
 <p>В Японии издателем игры выступала сама From Software; на международном рынке игру издавала компания Namco Bandai Games. Dark Souls, изначально известная под рабочим названием Project Dark, является идейным наследником игры Demon's Souls и второй частью в серии Souls.</p>
