--- a/Lab1/Dark_Souls3/index.html
+++ b/Lab1/Dark_Souls3/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 <h1>Dark Souls III</h1>
+<a href="../Demon_Souls/index.html"><img src="../Images/1.jpg" width="200px" height="150px"></a>
+<a href="../Dark_Souls1/index.html"><img src="../Images/2.jpg" width="200px" height="150px"></a>
+<a href="../Dark_Souls2/index.html"><img src="../Images/3.jpg" width="200px" height="150px"></a>
+<a href="../Dark_Souls3/index.html"><img src="../Images/4.jpg" width="200px" height="150px"></a>
 <div class=info>
 <p>Компьютерная игра в жанре Action/RPG с открытым миром, разработанная компанией FromSoftware для платформ Windows, PlayStation 4 и Xbox One.</p>
 <p>Анонс игры произошёл 15 июня 2015 года на конференции Microsoft в рамках выставки «E3 2015». Выход игры состоялся 24 марта 2016 года в Японии для Xbox One и PS4. Релиз во всём мире на консолях и PC состоялся 12 апреля 2016 года. </p>
